bk_ida/gccida/c1/asm_fprintf
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/asm_fprintf/src/final.c:4017:30: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( _DWORD)v10 == 46 || ( sch_istable[( unsigned __int8)v10] & 4) != 0 ) 
                             ^~~~~~~~~~~
                             _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/asm_fprintf/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/asm_fprintf/src/final.c:4029:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v10] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/asm_fprintf/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/asm_fprintf/src/obj/final.o] Error 1
